<resources>
    <string name="app_name">UniHome</string>
    <string name="unihome_logo">UniHome Logo</string>
    <string name="username_profile">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="emergency_number">Emergency Number</string>
    <string name="residence">Residence</string>
    <string name="notification">Notifications</string>
    <string name="application">Do Your Application </string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="surname">Last Name</string>
    <string name="nif">NIF</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="create_account">Create an account</string>
    <string name="close_button">X</string>
    <string name="chats">Chat\'s</string>
    <string name="empty_text"> </string>
    <string name="write_message">Write a message</string>
    <string name="send_message">Send</string>
    <string name="my_room">My Room</string>
    <string name="choose_room">Choose Room</string>
    <string name="choose_room_title">Choose your type of Room</string>
    <string name="payment">Payments</string>
    <string name="cleaningsList">Cleanings List</string>
    <string name="applicationsList">Applications List</string>
    <string name="course_name">Name of the course</string>
    <string name="cleaning_service">Cleaning Service</string>
    <string name="cleaning_list">Cleaning List</string>
    <string name="schedule_cleaning">Schedule Cleaning</string>
    <string name="submit">Submit</string>
    <string name="date">Date</string>
    <string name="date_scheduled">Date Scheduled</string>
    <string name="date_submitted">Date Submitted</string>
    <string name="time">Time</string>
    <string name="apply">Apply</string>
    <string name="issueDate">Issue Date</string>
    <string name="valueToPay">Value to Pay</string>
    <string name="issue_date">Issue Date</string>
    <string name="value_to_pay">Value to Pay</string>
    <string name="state">State</string>
    <string name="description">Description</string>
    <string name="observations">Observations</string>
    <string name="check_applications">Check Applications</string>
    <string name="list_renters">List Renters</string>
    <string name="list_residences">List Residences</string>
    <string name="pay">Pay</string>
    <string name="price">Price</string>
    <string name="Lorum20">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Integer at ipsum mi. Sed mollis eros non hendrerit rhoncus. Donec imperdiet.</string>
    <string name="Lorum40">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Morbi et turpis ultrices magna ornare fermentum. Aenean nec imperdiet risus,
        id eleifend mi. Vestibulum pharetra sed nunc quis facilisis. Pellentesque ut
        vulputate ex. Etiam sagittis cursus augue, ut mollis massa aliquet.</string>
    <string name="room_type_chosen">Room Type chosen</string>
    <string name="room_type">Room Type</string>
    <string name="last_year_status_question">Where you in a room last year?</string>
    <string name="application_status">Application status</string>
    <string name="last_year_status">Last year status</string>
    <string name="scholarship">Scholarship</string>
    <string name="do_you_have_scholarship">Do you have scholarship?</string>
    <string name="i_am_aware">I am Aware</string>
    <string name="terms">Accept the terms.</string>
    <string name="course">Course</string>
    <string name="identification">Identification</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="course_year">Course year</string>
    <string name="course_start">Course start</string>
    <string name="gender">Gender</string>
    <string name="nationality">Nationality</string>
    <string name="sos_number">Sos Number</string>
    <string name="residences_list">Residences List</string>
    <string name="location">Location</string>
</resources>