<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register_create_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:text="@string/create_account"
        android:textColor="@color/lightBrown"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_name_et"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="80dp"
        android:hint="@string/first_name"
        android:inputType="text"
        android:textColor="@color/lightBrown"
        android:textColorHint="@color/lightBrown"
        android:backgroundTint="@color/lightBrown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_create_account_tv" />

    <EditText
        android:id="@+id/register_surname_et"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:hint="@string/surname"
        android:inputType="text"
        android:textColor="@color/lightBrown"
        android:textColorHint="@color/lightBrown"
        android:backgroundTint="@color/lightBrown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_name_et" />

    <EditText
        android:id="@+id/register_email_et"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/lightBrown"
        android:textColorHint="@color/lightBrown"
        android:backgroundTint="@color/lightBrown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_surname_et" />

    <EditText
        android:id="@+id/register_password_et"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/lightBrown"
        android:textColorHint="@color/lightBrown"
        android:backgroundTint="@color/lightBrown"
        app:layout_constraintTop_toBottomOf="@+id/register_email_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/register_confirm_password_et"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/lightBrown"
        android:textColorHint="@color/lightBrown"
        android:backgroundTint="@color/lightBrown"
        app:layout_constraintTop_toBottomOf="@+id/register_password_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/register_signup_bt"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/sign_in"
        android:textColor="@color/beige"
        android:backgroundTint="@color/lightBrown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_confirm_password_et" />

    <TextView
        android:id="@+id/register_already_have_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/already_have_account"
        android:textColor="@color/keppel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_signup_bt"/>

</androidx.constraintlayout.widget.ConstraintLayout>