<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_unihome_logo_iv"
        android:layout_width="140dp"
        android:layout_height="158dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/unihome_logo"
        android:src="@drawable/uni_home_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/login_email_et"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="350dp"
        tools:layout_marginBottom="80dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/lightBrown"
        android:textColorHint="@color/lightBrown"
        android:backgroundTint="@color/lightBrown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        tools:layout_marginBottom="80dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/lightBrown"
        android:textColorHint="@color/lightBrown"
        android:backgroundTint="@color/lightBrown"
        app:layout_constraintTop_toBottomOf="@+id/login_email_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/login_log_in_bt"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/lightBrown"
        android:textColor="@color/beige"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/log_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_et" />

    <TextView
        android:id="@+id/login_dont_have_acc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/dont_have_acc"
        android:textColor="@color/keppel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_log_in_bt" />

</androidx.constraintlayout.widget.ConstraintLayout>