<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".ScheduleCleaningActivity">

    <ImageView
        android:id="@+id/schedulecleaning_exit_arrow_iv"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/exit_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/schedulecleaning_unihome_logo_iv"
        android:layout_width="45dp"
        android:layout_height="65dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/unihome_logo"
        android:src="@drawable/uni_home_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/line_separator_v"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/keppel"
        app:layout_constraintTop_toBottomOf="@id/schedulecleaning_unihome_logo_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/schedulecleaning_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_separator_v">

        <TextView
            android:id="@+id/schedulecleaning_schedule_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:text="@string/schedule_cleaning"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/keppel" />

        <TextView
            android:id="@+id/schedulecleaning_date_text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:text="@string/date"
            android:textSize="25sp"
            android:textColor="@color/keppel" />

        <DatePicker
            android:id="@+id/schedulecleaning_date_dp"
            android:theme="@style/DateTimePickerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false" />

        <TextView
            android:id="@+id/schedulecleaning_time_text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:text="@string/time"
            android:textSize="25sp"
            android:textColor="@color/keppel" />

        <TimePicker
            android:id="@+id/schedulecleaning_time_tp"
            android:theme="@style/DateTimePickerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner" />
    </LinearLayout>

    <Button
        android:id="@+id/schedulecleaning_submit_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/submit"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="@color/lightBrown"
        android:textColor="@color/beige"
        app:layout_constraintTop_toBottomOf="@id/schedulecleaning_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>