<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".ChatActivity">

    <TextView
        android:id="@+id/chat_chat_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/empty_text"
        android:textColor="@color/keppel"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chat_x_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/close_button"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/keppel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_separator_top_v"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/keppel"
        app:layout_constraintTop_toBottomOf="@id/chat_chat_name_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ListView
        android:id="@+id/chat_messages_lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@+id/line_separator_top_v"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/line_separator_bottom_v" />

    <View
        android:id="@+id/line_separator_bottom_v"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:background="@color/keppel"
        app:layout_constraintBottom_toTopOf="@id/chat_write_message_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/chat_write_message_et"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:hint="@string/write_message"
        android:textColor="@color/lightBrown"
        android:textColorHint="@color/lightBrown"
        android:backgroundTint="@color/lightBrown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/chat_send_message_bt"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/chat_send_message_bt"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/send_message"
        android:backgroundTint="@color/keppel"
        android:textColor="@color/beige"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/chat_write_message_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>